--- a/dada/extras/documentation/pod_source/install_dada_mail_cl.pod
+++ b/dada/extras/documentation/pod_source/install_dada_mail_cl.pod
@@ -6,8 +6,6 @@ Dada Mail is installed/configured using the included installer, either using the
 
 The web-based interface works great if you are setting up and running Dada Mail in a CGI environment. Otherwise, you probably will want to use the command line interface. 
 
-Installing with the CLI requires command line access (just to be perfectly clear)
-
 =head1 Installing Dada Mail via the CLI
 
 =head2 Download Dada Mail
@@ -38,8 +36,7 @@ Once in the C<installer> directory,change the permissions of the C<install.cgi> 
     cd installer
     chmod 755 install.cgi
 
-You're now ready to run the C<install.cgi> install/configuration script and below are instructions 
-on how to do that. 
+You're now ready to run the C<install.cgi> install/configuration script.
 
 To make sure permissions are set correctly,  we suggest running the C<install.cgi> script under the same owner as 
 will run Dada Mail (or change the ownership of the files at a later on - just don't forget!)
@@ -53,34 +50,34 @@ The C<install.cgi> script takes care of the following things:
 =item * Creates the .dada_files directory structure
 
 Dada Mail uses this directory structure to save it's configuration file, and 
-keep its temporary files, amongst other things. If you use SQLite for your backend, 
+keep its temporary files, among other things. If you use SQLite for your backend, 
 the SQLite database will be saved here, as well. 
 
 =item *  Writes the .dada_config configuration file. 
 
-Dada Mail's global configuration file is called, C.dada_config> and is itself
+Dada Mail's global configuration file is called, C<dada_config> and is itself
 written in Perl. Any global changes you would like to make to Dada Mail should be 
 made in this file. The global defaults are located in C<dada/DADA/Config.pm>, it 
 is not suggested that you make changes to this file. 
 
 =item * Copies over static files
 
-Dada Mail has a collection of static files that need to be copied over and in some 
-cases also configured to work. Static files include images, stylesheets and javascript files - 
-some of these need extra configuration. Dada Mail keeps all of these files in a directory 
-called C<dada_mail_support_files>. The collection of these files will be copied from the, C<dada/static> 
-directory from the distribution, but the design is not to configure Dada Mail to use the location 
-as the location for your C<dada_mail_support_files> directory> - they should most 
-definitely be located outside of the C<dada> directory. 
+Dada Mail has a collection of static files that need to be copied over. 
+
+Static files include images, stylesheets and javascript files - some of these need extra configuration. 
+Dada Mail keeps all of these files in a directory called C<dada_mail_support_files>. 
+The collection of these files will be copied from the, C<dada/static> 
+directory of the distribution.
 
 =item * Verifies configuration information
 
-The installer will make sure that the information you submit is correct - files 
+The installer will try to make sure that the information you submit is correct - files 
 can be written where you ask them to be written, the database connection works, etc. 
 
 =back
 
-The C<install.cgi> script does not take care of any web server configuration, so for example, if you run Dada Mail under PSGI/Plack, you will need to configure your webserver (nginx, most likely) to run Dada Mail, once you start the PSGI process. 
+The C<install.cgi> script does not take care of any web server configuration. 
+If you run Dada Mail under PSGI/Plack, you will need to configure your webserver (nginx, most likely) to run Dada Mail, once you start the PSGI process. 
 
 More on running Dada Mail under nginx:
 
@@ -88,8 +85,8 @@ L<http://dadamailproject.com/d/features-psgi_support.pod.html>
 
 =head1 Required Paramaters
 
-The following parameters are required, if you're INSTALLING Dada Mail. If you 
-are UPGRADING Dada Mail, there are separate options to make things easier: 
+The following parameters are required, if you're B<installing> Dada Mail. If you 
+are B<upgrading> Dada Mail, there are separate options to make things easier: 
  
 =head2 --dada_files_loc
 
@@ -97,16 +94,16 @@ Dada Mail needs a certain directory structure to keep its configuration files,
 temporary files, etc in.  The top directory will be called, ".dada_files" and 
 will need to be readable/writable to whatever process runs Dada Mail. 
 
-Set C<--dada_files_loc> to the parent directory you would like the .dada_files 
+Set C<--dada_files_loc> to the B<parent> directory you would like the .dada_files 
 directory to be created in. 
  
 =head2 --program_url
 
-The URL used to access Dada Mail. 
+The URL that will be used to access Dada Mail. 
 
-=head2--dada_root_pass
+=head2 --dada_root_pass
 
-The Dada Mail Root Password you'd like to use 
+The Dada Mail Root Password you'd like to use
 
 =head2 --support_files_dir_path --support_files_dir_url
 
@@ -178,7 +175,7 @@ Dada Mail defaults to, "CGI". Supported are the following:
 
 When running Dada Mail as a CGI scripts using something like Apache and mod_cgi,
 most likely in a shared hosting environment. This is the default configuration, 
-so you will not need to pass this parameter.
+so you will not need to pass this parameter if you would like to run under CGI. 
 
 =item * FastCGI
 
@@ -241,7 +238,7 @@ This also works:
 
 =head2 --install_wysiwyg_editors
 
-You can pass one of the following (or both), to setup and install the following WYSIWYG editors: 
+You may pass one of the following (or both), to setup and install the following WYSIWYG editors: 
 
 =over
 
@@ -267,10 +264,13 @@ Unlike the, C<--install_wysiwyg_editors> option, C<--install_file_browser> (and 
 
 =head2 Amazon SES
 
-Dada Mail support for using Amazon SES to send messages out, sending verification 
-email messages to addresses you would like to use the service, and to find out 
-your sending stats and limitations. To do that, you will need to pass your 
-C<AWSAccessKeyId> and C<AWSSecretKey>.
+Dada Mail supports Amazon SES to send messages out, sending verification 
+email messages  and to find out  your sending stats and limitations. More information 
+on Amazon SES support: 
+
+L<http://dadamailproject.com/d/features-amazon_ses_support.pod.html>
+
+To enable Amazon SES support you will need to pass your  C<AWSAccessKeyId> and C<AWSSecretKey>.
 
 =over
 
@@ -333,8 +333,8 @@ so that you can resuse your own recipe for installing Dada Mail in multiple loca
 
 =head1 Upgrading
 
-If you are using the installer to upgrade from an install of dada mail you installed, 
-using the installer, you may simply pass the, 
+If you are using the installer to upgrade from an install of dada mail you've installed
+beforeusing the installer, you may simply pass the, 
 
 	--dada_files_loc
 		
@@ -414,6 +414,5 @@ Displays this help doc. Use:
 Please file any problems at: 
 
 L<https://github.com/justingit/dada-mail/issues> 
-
 
 =cut
