--- a/dada/extras/documentation/pod_source/install_dada_mail.pod
+++ b/dada/extras/documentation/pod_source/install_dada_mail.pod
@@ -9,14 +9,14 @@
 <uL>
 <p>
     <li>
-    <a href="https://sourceforge.net/projects/dadamail/files/dada-8_0_0-alpha3.tar.gz/download">
-        Click here to download to Dada Mail v8.0.0 Alpha 3
+    <a href="https://sourceforge.net/projects/dadamail/files/dada-8_0_0-beta1.tar.gz/download">
+        Click here to download to Dada Mail v8.0.0 Beta 1
     </a> 
     </li>
     <li>
     Or, if you're a Pro Dada Subscriber, 
     <a href="http://dadamailproject.com/pro_dada">
-        click here to download to Pro Dada v8.0.0 Alpha 3
+        click here to download to Pro Dada v8.0.0 Beta 1
     </a>
     </li>
 </ul>
@@ -31,12 +31,12 @@
 
 =end html 
 
-I<When installing Pro Dada, use, B<pro_dada-8_0_0-alpha3.tar.gz> as the name of the distribution, in these directions.>
+I<When installing Pro Dada, use, B<pro_dada-8_0_0-beta1.tar.gz> as the name of the distribution, in these directions.>
 
 
-=head2 Step #2 Upload the, "dada-8_0_0-alpha3.tar.gz" distro into your cgi-bin
+=head2 Step #2 Upload the, "dada-8_0_0-beta1.tar.gz" distro into your cgi-bin
 
-Once you downloaded the C<dada-8_0_0-alpha3.tar.gz> distro, upload it to your hosting account's I<cgi-bin>.
+Once you downloaded the C<dada-8_0_0-beta1.tar.gz> distro, upload it to your hosting account's I<cgi-bin>.
 
 =begin html
 
@@ -55,17 +55,17 @@ Download the, C<uncompress_dada.cgi> script from here:
 =begin html 
 
 <ul>
-<li><strong><a href="https://raw.github.com/justingit/dada-mail/v8_0_0-alpha3_2015_03_05/uncompress_dada.cgi">uncompress_dada.cgi</a> (Save Page/Link As...)</strong></li></ul>
+<li><strong><a href="https://raw.github.com/justingit/dada-mail/v8_0_0-beta1_2015_03_11/uncompress_dada.cgi">uncompress_dada.cgi</a> (Save Page/Link As...)</strong></li></ul>
 
 =end html
 
-and upload this script (PlainTest/ASCII mode - NOT binary!) to your hosting account's I<cgi-bin> directory - right alongside the I<dada-8_0_0-alpha3.tar.gz> distro you just put up. 
+and upload this script (PlainTest/ASCII mode - NOT binary!) to your hosting account's I<cgi-bin> directory - right alongside the I<dada-8_0_0-beta1.tar.gz> distro you just put up. 
 
 =head2 Step #4 Change permissions of the, "uncompress_dada.cgi" file to, "755"
 
 =head2 Step #5 Visit the, "uncompress_dada.cgi" script in your web browser. 
 
-The, C<uncompress_dada.cgi> should attempt to uncompress the I<dada-8_0_0-alpha3.tar.gz> distro, change the necessary permissions of various files and prep the actual installer for you to use. 
+The, C<uncompress_dada.cgi> should attempt to uncompress the I<dada-8_0_0-beta1.tar.gz> distro, change the necessary permissions of various files and prep the actual installer for you to use. 
 
 Once it's finished running, you should be presented with a link to use the actual installer. Click the link at the bottom of the screen and go ahead and configure Dada Mail! 
 
@@ -76,7 +76,7 @@ Once it's finished running, you should be presented with a link to use the actua
 <p>See, <a href="./FAQ-install_upgrade.pod.html#prepping_dada_mail_manually">Prepping Dada Mail Manually</a> if this doesn't happen and you get a message in your browser window, sort of like this: </p>
 
 <pre>
-Can't find dada-8_0_0-alpha3.tar to uncompress!
+Can't find dada-8_0_0-beta1.tar to uncompress!
 
 You may have to uncompress and prep Dada Mail manually.
 </pre> 
