--- a/dada/extras/documentation/pod_source/features-fastcgi.pod
+++ b/dada/extras/documentation/pod_source/features-fastcgi.pod
@@ -31,6 +31,16 @@ Dada Mail running under FastCGI does have additional requirements, which can usu
 
 Your web hosting account also needs to support running Perl apps under FastCGI. FastCGI support for Dada Mail is set up to use an environment similar to having Apache configure with support for the mod_fcgi/mod_fastcgi module: simply accessing the script starts up an FastCGI process, which persists for a specified amount of time (more requests may create a specified pool of processes). If you make global configuration changes to Dada Mail, you will want to manually kill these processes, before you will see your configuration changes.
 
+Hosting companies that provide support for running Dada Mail under FastCGI in this configuration include: 
+
+=over
+
+=item * Bluehost/Hostmonster
+
+=item * Dreamhost
+
+=back
+
 If you want to run Dada Mail under a different environment, for example: you're running the nginx webserver with a reverse proxy to a fastcgi server, you most likely want to run Dada Mail under PSGI/Plack, where one of the PSGI server options is to run as a FastCGI server.
 
 =head1 Feedback
