--- a/dada/extras/documentation/pod_source/dada7_to_dada8.pod
+++ b/dada/extras/documentation/pod_source/dada7_to_dada8.pod
@@ -2,9 +2,20 @@
 
 =head1 Dada Mail 7 to Dada Mail 8 Upgrade Guide
 
+=head1 Upgrade Checklist
+
+If you are running a version of Dada Mail below v8, here are a few things to make sure you have, before upgrading: 
+
+=over
+
+=item * Perl Minimum Version: 5.10.1
+
+=item * MySQL/PostgreSQL + Perl Driver support 
+
+
 =head1 Perl Minimum Version: 5.10.1
 
-Dada Mail now requires v5.10.1 of Perl, the previous minimum version was v5.8.1.
+Dada Mail now requires v5.10.1 of Perl and cannot be run under a version lower. The previous minimum version was v5.8.1.
 
 =head1 FastCGI Support
 
@@ -21,6 +32,10 @@ This time-savings really becomes apparent if you have a busy website, where Dada
 Dada Mail also has PSGI support. PSGI support has many of the advantages of running Dada Mail under FastCGI, but is much more modern and flexible because of its idea of Middleware. Details: 
 
 L<http://dadamailproject.com/d/features-psgi_support.pod.html>
+
+=head1 CGI Support
+
+Just to make things clear, Dada Mail still has support to be run under CGI, as it has since it was written.
 
 =head1 CGI::Application-based
 
@@ -42,9 +57,8 @@ This cronjob can be customized, and the output of the cronjob can be logged by D
 
 L<http://dadamailproject.com/d/features-scheduled_cronjobs.pod.html>
 
-=head1 Supported Backends
+=head1 Supported Backends: SQL, Unsupported Backend: Default
 
-=head2 SQL
 
 All the current SQL backends: SQLite, MySQL and PostgreSQL are still supported, but the B<Default (file-based) Backend will finally be retired>. 
 
@@ -76,35 +90,12 @@ The functionality of the C<mailing_monitor.cgi> plugin has been folded into the 
 
 =head3 Beatitude (scheduled_mailings.pl) 
 
-Beatitude, after many years of being marked as, "deprecated", has been removed from Dada Mail. The biggest problem is that the internal architecture of Beatitude was just not going to work as a FastCGI app. 
+Beatitude, after many years of being marked as, "deprecated", has been removed from Dada Mail. The biggest problem is that the internal architecture of Beatitude was just not going to work going forward.
 
-Scheduling Mass Mailings is supported within the core of Dada Mail, although recurring schedules (run a message every day or every week, etc) are still not supported.
+Scheduling Mass Mailings is supported within the core of Dada Mail, although recurring schedules (run a message every day or every week, etc) are currently not supported.
 
 =head3 default_mass_mailing_messages.cgi
 
 The core of Dada Mail now supports Stationery, which allows you to set multiple messages that you can use to start a new draft. 
-
-=head1 TODO
-
-We could really use your feedback. Please contact us directly: 
-
-L<http://dadamailproject.com/contact/>
-
-Start a new thread, 
-
-L<http://dadamailproject.com/support/boards>
-
-sign up and post to the dadadev mailing list: 
-
-L<http://dadamailproject.com/cgi-bin/dada/mail.cgi/list/dadadev/>
-
-or file an issue (please post the version you're using (ie: v8):
-
-L<https://github.com/justingit/dada-mail/issues>
-
-And tell us how well Dada Mail 8 is working for you.
-
-We're most concerned about how Dada Mail is running under FastCGI - that's all new to us, and we're almost positive that there's some issues to work out in some particularily important parts of the app (mass mailing sending!) 
-
 
 =cut
